STN-480:  Fix spacing beside navigation dropdown toggle (#686)
* fix (STN-480): add spacing to navigation dropdown arrow in nested toggler

- When all pages within a nested toggler are private, the class of hb-main-nav__item--parent is not added. Without this class the icon beside nav items doesn't recieve appropriate spacing. Resolve by adding spacing to the nested toggler.

* feat: add compiled CSS

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_main-nav.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_main-nav.scss
@@ -272,6 +272,10 @@
     &.hb-nested-toggler {
       position: relative;
 
+      @include grid-media-min('lg') {
+        padding-right: hb-calculate-rems(20px);
+      }
+
       &::after {
         @include hb-menu-icon-wrapper(48px, 48px);
         @include hb-menu-plus-icon;
@@ -303,8 +307,10 @@
         }
       }
 
-
-      &[aria-expanded="true"]::after {
+      // The minus and arrow up icons representing the expanded state of a nav item
+      // should only apply when item has the .hb-main-nav__item--parent class.
+      // This class is only added when there are children in the nested toggler.
+      .hb-main-nav__item--parent &[aria-expanded="true"]::after {
         @include hb-menu-minus-icon;
 
         @include grid-media-min('lg') {
